--- a/yocto-conf/bblayers.conf.sample
+++ b/yocto-conf/bblayers.conf.sample
@@ -10,4 +10,19 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-poky \
   ${TOPDIR}/../meta-yocto-bsp \
   ${TOPDIR}/../meta-raspberrypi \
+  ${TOPDIR}/../meta-rpi \
+  ${TOPDIR}/../meta-openembedded/meta-efl \
+  ${TOPDIR}/../meta-openembedded/meta-filesystems \
+  ${TOPDIR}/../meta-openembedded/meta-gnome \
+  ${TOPDIR}/../meta-openembedded/meta-gpe \
+  ${TOPDIR}/../meta-openembedded/meta-initramfs \
+  ${TOPDIR}/../meta-openembedded/meta-multimedia \
+  ${TOPDIR}/../meta-openembedded/meta-networking \
+  ${TOPDIR}/../meta-openembedded/meta-oe \
+  ${TOPDIR}/../meta-openembedded/meta-perl \
+  ${TOPDIR}/../meta-openembedded/meta-python \
+  ${TOPDIR}/../meta-openembedded/meta-ruby \
+  ${TOPDIR}/../meta-openembedded/meta-systemd \
+  ${TOPDIR}/../meta-openembedded/meta-webserver \
+  ${TOPDIR}/../meta-openembedded/meta-xfce \
   "
