distro: Remove unneeded features
Signed-off-by: Oleh Cherpak <oleh.cherpak@globallogic.com>

--- a/yocto-conf/local.conf.sample
+++ b/yocto-conf/local.conf.sample
@@ -51,7 +51,16 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "1"
 
 PREFERRED_VERSION_linux-raspberrypi = "4.%"
-DISTRO_FEATURES_remove = "wayland"
+DISTRO_FEATURES_remove = "\
+    wayland \
+    bluetooth \
+    nfs \
+    pci \
+    3g \
+    nfc \
+    pulseaudio \
+    bluez5 \
+    "
 
 LICENSE_FLAGS_WHITELIST="commercial"
 
